--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <td align="left"><p>I am an Assistant Professor in the <a href="https://www.engr.wisc.edu/department/electrical-computer-engineering/">Electrical and Computer Engineering Department</a> at UW-Madison, with affiliated appointments in the Departments of <a href="https://www.math.wisc.edu/">Mathematics</a> and <a href="https://stat.wisc.edu/">Statistics</a>. My research interests lie in the areas of information theory, machine learning, and network science. </p>
 </td></tr></table>
 <h2>Contact</h2>
-<p>My office address is at M1002E Engineering Centers Building. I can be reached my email at: </p>
+<p>My office address is at M1002E Engineering Centers Building. I can be reached by email at: </p>
 <table class="imgtable"><tr><td>
 <img src="email.jpeg" alt="" width="125px" />&nbsp;</td>
 <td align="left"></td></tr></table>
@@ -36,7 +36,7 @@
 <p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. Since 2016, he is an Assistant Professor at the Electrical and Computer Engineering Department and a fellow at the Grainger Institute for Engineering at the University of Wisconsin-Madison. His research interests include information theory, machine learning, and network science. He is a recipient of the NSF-CAREER Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015) and the Jack Keil Wolf student paper award at ISIT 2015. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-01 21:33:06 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2020-11-01 21:43:31 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
