--- a/news.html
+++ b/news.html
@@ -23,6 +23,10 @@
 <h1>Recent news</h1>
 </div>
 <ul>
+<li><p>Started a new position as Lecturer at the University of Cambridge, January 2021</p>
+</li>
+</ul>
+<ul>
 <li><p>Invited talk at the Probability and Analysis Webinar, September 2020</p>
 </li>
 </ul>
@@ -52,7 +56,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-01 21:43:31 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-01 20:29:40 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
