--- a/teaching.html
+++ b/teaching.html
@@ -22,11 +22,12 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<p>I have taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo; in the past.</p>
-<p>I am on teaching leave in Fall 2020</p>
+<p>I am not teaching in Lent 2021. </p>
+<p>I will be teaching Optimization (Part IB) in Easter 2021.</p>
+<p>At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-11-01 21:43:32 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-01-01 20:29:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
