--- a/group.html
+++ b/group.html
@@ -43,9 +43,9 @@
 <li><p>Tanmayee Joshi (Department of Electrical and Computer Engineering, co-advised with Dr. Alan McMillan)</p>
 </li>
 </ul>
-<h2>Research-MS</h2>
+<h2>Postdocs</h2>
 <ul>
-<li><p>Sidharth Gurbani (Department of Electrical and Computer Engineering)</p>
+<li><p>Amir Asadi (DPMMS, Cambridge)</p>
 </li>
 </ul>
 <h2>Alumni</h2>
@@ -61,9 +61,13 @@
 <li><p>Kamini Jodha (Department of Electrical and Computer Engineering) MLSP Accelerated MS&rsquo;18</p>
 </li>
 </ul>
+<ul>
+<li><p>Sidharth Gurbani (Department of Electrical and Computer Engineering) Research MS&rsquo;20</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-12 20:21:12 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:06:23 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
