--- a/news.html
+++ b/news.html
@@ -23,40 +23,16 @@
 <h1>Recent news</h1>
 </div>
 <ul>
+<li><p>I am an Associate Editor for the IEEE Transactions on Information Theory, October 2021</p>
+</li>
+</ul>
+<ul>
 <li><p>Started a new position as Lecturer at the University of Cambridge, January 2021</p>
-</li>
-</ul>
-<ul>
-<li><p>Invited talk at the Probability and Analysis Webinar, September 2020</p>
-</li>
-</ul>
-<ul>
-<li><p>Invited talk at the USC Probability/Statistics Seminar, August 2020</p>
-</li>
-</ul>
-<ul>
-<li><p>Invited talk at the virtual workshop on &ldquo;Optimal Transport, Topological Data Analysis and Applications to Shape and Machine Learning&rdquo; at Ohio State University, July 2020</p>
-</li>
-</ul>
-<ul>
-<li><p>Thanks to NIH-National Library of Medicine for supporting my research with Alan McMillan and Po-Ling Loh on robust ML for medical imaging via an R01 grant! July 2020-June 2024</p>
-</li>
-</ul>
-<ul>
-<li><p>Thanks to NSF for supporting my research through the NSF-CAREER Award (2020-2025)!</p>
-</li>
-</ul>
-<ul>
-<li><p>Invited talk at the Bombay Information Theory Seminar (BITS ) (January 2020)</p>
-</li>
-</ul>
-<ul>
-<li><p>Thanks to NSF for supporting my research through the  grants CCF-1841190 (EAGER) and CCF-1907786 (CIF Small grant)</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-12 20:21:12 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:06:23 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
