--- a/publications.html
+++ b/publications.html
@@ -28,14 +28,6 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2006.09568"><b>Reverse Euclidean and Gaussian isoperimetric inequalities for parallel sets with applications</b></a> <br /> Varun Jog <br /> August 2020</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/1907.03087"><b>Estimating location parameters in entangled single-sample distributions</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> July 2019</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/1905.04362"><b>Channels, Learning, Queueing and Remote Estimation Systems With A Utilization-Dependent Component</b></a> <br /> Varun Jog, Richard J. La,  and Nuno C. Martins <br /> May 2019</p>
 </li>
 </ul>
@@ -44,6 +36,10 @@
 </li>
 </ul>
 <h2>Conference publications</h2>
+<ul>
+<li><p><a href="*Many">faces of adversarial risk*</a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> NeuRIPS 2021</p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://arxiv.org/pdf/1912.02794.pdf"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> ICML 2020</p>
 </li>
@@ -138,6 +134,18 @@
 </ul>
 <h2>Journal publications</h2>
 <ul>
+<li><p><a href="https://ieeexplore.ieee.org/document/9507500"><b>Reverse Euclidean and Gaussian isoperimetric inequalities for parallel sets with applications</b></a> <br /> Varun Jog <br /> August 2021</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://ieeexplore.ieee.org/document/9496634"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> July 2021</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://doi.org/10.1093/imaiai/iaab013"><b>Estimating location parameters in sample-heterogeneous distributions</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2021</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/1901.07063"><b>Teaching and learning in uncertainty</b></a> <br /> Varun Jog and Po-Ling Loh <br /> IEEE Transactions on Information Theory, 2020</p>
 </li>
 </ul>
@@ -179,7 +187,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-12 20:21:12 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:06:24 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
