--- a/index.html
+++ b/index.html
@@ -34,14 +34,9 @@
 <td align="left"></td></tr></table>
 <h2>Third person biography</h2>
 <p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. He was an Assistant Professor in the Electrical and Computer Engineering Department at UW-Madison from 2016-2020. Since January 2021, he is a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. His research interests include information theory, machine learning, and network science. He is a recipient of the NSF-CAREER Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015) and the Jack Keil Wolf student paper award at ISIT 2015. </p>
-<h2>Available positions</h2>
-<div class="infoblock">
-<div class="blockcontent">
-<p>I am looking to hire a Postdoctoral Research Associate for the academic year 2021-2022. Please find details here: <a href="https://www.jobs.cam.ac.uk/job/28337/">https:<i></i>www.jobs.cam.ac.uk<i>job</i>28337/</a>. The deadline for applications is <b>February 5, 2021</b>.</p>
-</div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-01-12 20:21:12 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:06:23 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
