--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 </ul>
 <h2>Conference publications</h2>
 <ul>
-<li><p><a href="*Many">faces of adversarial risk*</a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> NeuRIPS 2021</p>
+<li><p><b>Many faces of adversarial risk</b> <br /> Muni Sreenivas Pydi and Varun Jog <br /> NeuRIPS 2021</p>
 </li>
 </ul>
 <ul>
@@ -134,15 +134,15 @@
 </ul>
 <h2>Journal publications</h2>
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/document/9507500"><b>Reverse Euclidean and Gaussian isoperimetric inequalities for parallel sets with applications</b></a> <br /> Varun Jog <br /> August 2021</p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9507500"><b>Reverse Euclidean and Gaussian isoperimetric inequalities for parallel sets with applications</b></a> <br /> Varun Jog <br /> IEEE Transactions on Information Theory, August 2021</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/document/9496634"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> July 2021</p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9496634"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> IEEE Transactions on Information Theory,, July 2021</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://doi.org/10.1093/imaiai/iaab013"><b>Estimating location parameters in sample-heterogeneous distributions</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2021</p>
+<li><p><a href="https://doi.org/10.1093/imaiai/iaab013"><b>Estimating location parameters in sample-heterogeneous distributions</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> Information and Inference, June 2021</p>
 </li>
 </ul>
 <ul>
@@ -187,7 +187,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:06:24 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:33:25 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
