--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,7 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="https://ieeexplore.ieee.org/document/9496634"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> IEEE Transactions on Information Theory,, July 2021</p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9496634"><b>Adversarial risk via optimal transport and optimal couplings</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> IEEE Transactions on Information Theory, July 2021</p>
 </li>
 </ul>
 <ul>
@@ -187,7 +187,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:33:25 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:36:36 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
