--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h2>About Me</h2>
 <table class="imgtable"><tr><td>
 <img src="varunjog.jpeg" alt="" width="148px" height="175px" />&nbsp;</td>
-<td align="left"><p>I am a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. My research interests lie in the areas of information theory, machine learning, and convex geometry. </p>
+<td align="left"><p>I am a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. My research interests lie in the areas of information theory, machine learning, and statistics. </p>
 </td></tr></table>
 <h2>Contact</h2>
 <p>I can be reached by email at: </p>
@@ -33,10 +33,10 @@
 <img src="email.png" alt="" width="125px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <h2>Third person biography</h2>
-<p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. He was an Assistant Professor in the Electrical and Computer Engineering Department at UW-Madison from 2016-2020. Since January 2021, he is a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. His research interests include information theory, machine learning, and network science. He is a recipient of the NSF-CAREER Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015) and the Jack Keil Wolf student paper award at ISIT 2015. </p>
+<p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. He was an Assistant Professor in the Electrical and Computer Engineering Department at UW-Madison from 2016-2020. Since January 2021, he is a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. His research interests include information theory, machine learning, and statistics. He is a recipient of the NSF-CAREER Award (2020), the R. Narasimhan Memorial Lecture Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015), and the Jack Keil Wolf student paper award at ISIT 2015. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:36:36 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-23 13:43:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
