--- a/news.html
+++ b/news.html
@@ -23,6 +23,10 @@
 <h1>Recent news</h1>
 </div>
 <ul>
+<li><p>I am organizing the <a href="https://varunjog.github.io/itseminar.html"><b>Cambridge Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Ventaramanan</b></a> from Michaelmas 2022.</p>
+</li>
+</ul>
+<ul>
 <li><p>I am an Associate Editor for the IEEE Transactions on Information Theory, October 2021</p>
 </li>
 </ul>
@@ -32,7 +36,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:43:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 10:37:08 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
