--- a/publications.html
+++ b/publications.html
@@ -24,20 +24,21 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
+Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2022</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2009.12976"><b>Robust regression with covariate filtering: Heavy tails and adversarial contamination</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> September 2020</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/1905.04362"><b>Channels, Learning, Queueing and Remote Estimation Systems With A Utilization-Dependent Component</b></a> <br /> Varun Jog, Richard J. La,  and Nuno C. Martins <br /> May 2019</p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/1901.06619"><b>Unifying the Brascamp-Lieb inequality and the Entropy Power inequality</b></a> <br /> Venkat Anantharam, Varun Jog, and Chandra Nair.  <br /> January 2019</p>
 </li>
 </ul>
 <h2>Conference publications</h2>
 <ul>
-<li><p><b>Many faces of adversarial risk</b> <br /> Muni Sreenivas Pydi and Varun Jog <br /> NeuRIPS 2021</p>
+<li><p><a href="https://ieeexplore.ieee.org/document/9834363"><b>Simple Binary Hypothesis Testing under Communication Constraints</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> ISIT 2022</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://proceedings.neurips.cc/paper/2021/file/52c4608c2f126708211b9e0a60eaf050-Paper.pdf"><b>Many faces of adversarial risk</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> NeuRIPS 2021</p>
 </li>
 </ul>
 <ul>
@@ -134,6 +135,10 @@
 </ul>
 <h2>Journal publications</h2>
 <ul>
+<li><p><a href="https://ieeexplore.ieee.org/document/9834952"><b>Unifying the Brascamp-Lieb inequality and the Entropy Power inequality</b></a> <br /> Venkat Anantharam, Varun Jog, and Chandra Nair.  <br /> IEEE Transactions on Information Theory, July 2022</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://ieeexplore.ieee.org/document/9507500"><b>Reverse Euclidean and Gaussian isoperimetric inequalities for parallel sets with applications</b></a> <br /> Varun Jog <br /> IEEE Transactions on Information Theory, August 2021</p>
 </li>
 </ul>
@@ -185,9 +190,14 @@
 <li><p><a href="https://ieeexplore.ieee.org/document/6502718?section=abstract"><b>An information inequality and  evaluation of Marton's inner bound for binary input broadcast channels</b></a> <br /> Yanlin Geng, Varun Jog, Chandra Nair, Vincent Zizhou Wang <br /> IEEE Transactions on Information Theory, 2013</p>
 </li>
 </ul>
+<h2>Manuscripts</h2>
+<ul>
+<li><p><a href="https://arxiv.org/abs/1905.04362"><b>Channels, Learning, Queueing and Remote Estimation Systems With A Utilization-Dependent Component</b></a> <br /> Varun Jog, Richard J. La,  and Nuno C. Martins <br /> May 2019</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:43:27 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 10:37:09 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
