--- a/group.html
+++ b/group.html
@@ -24,10 +24,6 @@
 </div>
 <h2>PhD </h2>
 <ul>
-<li><p>Adrian Tovar Lopez (Department of Mathematics)</p>
-</li>
-</ul>
-<ul>
 <li><p>Ankit Pensia (Department of Computer Sciences, co-advised with Prof. Po-Ling Loh)</p>
 </li>
 </ul>
@@ -35,20 +31,21 @@
 <li><p>Jinnian Zhang (Department of Electrical and Computer Engineering, co-advised with Dr. Alan McMillan)</p>
 </li>
 </ul>
-<ul>
-<li><p>Muni Sreenivas Pydi (Department of Electrical and Computer Engineering)</p>
-</li>
-</ul>
-<ul>
-<li><p>Tanmayee Joshi (Department of Electrical and Computer Engineering, co-advised with Dr. Alan McMillan)</p>
-</li>
-</ul>
 <h2>Postdocs</h2>
 <ul>
 <li><p>Amir Asadi (DPMMS, Cambridge)</p>
 </li>
 </ul>
-<h2>Alumni</h2>
+<h2>PhD Alumni</h2>
+<ul>
+<li><p>Muni Sreenivas Pydi (Department of Electrical and Computer Engineering), PhD 2022</p>
+</li>
+</ul>
+<ul>
+<li><p>Adrian Tovar Lopez (Department of Mathematics), PhD 2021</p>
+</li>
+</ul>
+<h2>MS Alumni</h2>
 <ul>
 <li><p>Pankaj Kabra (Department of Electrical and Computer Engineering), Research-MS&rsquo;19</p>
 </li>
@@ -67,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:43:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 10:37:08 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
