--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. He was an Assistant Professor in the Electrical and Computer Engineering Department at UW-Madison from 2016-2020. Since January 2021, he is a Lecturer in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. His research interests include information theory, machine learning, and statistics. He is a recipient of the NSF-CAREER Award (2020), the R. Narasimhan Memorial Lecture Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015), and the Jack Keil Wolf student paper award at ISIT 2015. </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:43:26 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 10:37:08 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
