--- a/teaching.html
+++ b/teaching.html
@@ -22,12 +22,12 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<p>I am teaching Part III: Concentration Inequalities in Michaelmas 2021.</p>
-<p>I will not be teaching in Lent 2022.</p>
-<p>At Cambridge, I taught Part IB: Optimization in Easter 2021. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
+<p>I will not be teaching in Michaelmas 2022.</p>
+<p>I am teaching Part III: Concentration Inequalities in Lent 2023 and Part IB: Optimization in Easter 2023.</p>
+<p>At Cambridge, I taught Part IB: Optimization in Easter 2021 and Part III: Concentration Inequalities in Michaelmas 2021. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-23 13:43:27 CDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 10:37:09 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
