--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="news.html">News</a></div>
+<div class="menu-item"><a href="itseminar.html">Information&nbsp;Theory&nbsp;Seminar</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -197,7 +198,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-25 10:37:09 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 11:50:18 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
