--- a/teaching.html
+++ b/teaching.html
@@ -17,6 +17,7 @@
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="news.html">News</a></div>
+<div class="menu-item"><a href="itseminar.html">Information&nbsp;Theory&nbsp;Seminar</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -27,7 +28,7 @@
 <p>At Cambridge, I taught Part IB: Optimization in Easter 2021 and Part III: Concentration Inequalities in Michaelmas 2021. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-25 10:37:09 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 11:50:18 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
