--- a/itseminar.html
+++ b/itseminar.html
@@ -23,28 +23,28 @@
 <div id="toptitle">
 <h1>Information Theory Seminar</h1>
 </div>
+<p>Please contact <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Ventaramanan</b></a> or me if you would like to speak, have speaker suggestions, or have any other questions.</p>
 <h2>Michaelmas 2022</h2>
-<p>The seminar will be in MR5 every Wednesday from 2-3 pm during the Michaelmas Term. The talk schedule and talk details are below.</p>
-<p><br />
-<br /></p>
+<p>The talks will be in MR5 in the Centre for Mathematical Sciences every Wednesday from 2-3 pm during the Michaelmas Term. The talk schedule and talk details are below. </p>
+<p><br /></p>
 <ul>
-<li><p>October 12,	Michele Wigger</p>
+<li><p>October 12,	<a href="https://perso.telecom-paristech.fr/wigger/"><b>Michele Wigger</b></a></p>
 </li>
 </ul>
 <ul>
-<li><p>October 19,	Matthew Aldridge</p>
+<li><p>October 19,	<a href="https://mpaldridge.github.io/"><b>Matthew Aldridge</b></a></p>
 </li>
 </ul>
 <ul>
-<li><p>October 26,	Lampros Gavalakis</p>
+<li><p>October 26,	<a href="https://www-sigproc.eng.cam.ac.uk/Main/LG560"><b>Lampros Gavalakis</b></a></p>
 </li>
 </ul>
 <ul>
-<li><p>November 2,	Stefan Moser</p>
+<li><p>November 2,	<a href="https://moser-isi.ethz.ch/main.html"><b>Stefan Moser</b></a></p>
 </li>
 </ul>
 <ul>
-<li><p>November 9,	Sidharth Jaggi</p>
+<li><p>November 9,	<a href="https://research-information.bris.ac.uk/en/persons/sidharth-sid-jaggi"><b>Sidharth Jaggi</b></a></p>
 </li>
 </ul>
 <ul>
@@ -52,7 +52,7 @@
 </li>
 </ul>
 <ul>
-<li><p>November 23,	Fanny Yang</p>
+<li><p>November 23,	<a href="https://sml.inf.ethz.ch/group/fannyy/"><b>Fanny Yang</b></a></p>
 </li>
 </ul>
 <ul>
@@ -61,7 +61,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-25 11:50:18 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-25 11:59:19 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
