--- a/group.html
+++ b/group.html
@@ -27,10 +27,6 @@
 <li><p>Ankit Pensia (Department of Computer Sciences, co-advised with Prof. Po-Ling Loh)</p>
 </li>
 </ul>
-<ul>
-<li><p>Jinnian Zhang (Department of Electrical and Computer Engineering, co-advised with Dr. Alan McMillan)</p>
-</li>
-</ul>
 <h2>Postdocs</h2>
 <ul>
 <li><p>Amir Asadi (DPMMS, Cambridge)</p>
@@ -38,33 +34,37 @@
 </ul>
 <h2>PhD Alumni</h2>
 <ul>
-<li><p>Muni Sreenivas Pydi (Department of Electrical and Computer Engineering), PhD 2022</p>
+<li><p>Jinnian Zhang (Department of Electrical and Computer Engineering, UW-Madison, co-advised with Dr. Alan McMillan) PhD 2023</p>
 </li>
 </ul>
 <ul>
-<li><p>Adrian Tovar Lopez (Department of Mathematics), PhD 2021</p>
+<li><p>Muni Sreenivas Pydi (Department of Electrical and Computer Engineering, UW-Madison), PhD 2022</p>
+</li>
+</ul>
+<ul>
+<li><p>Adrian Tovar Lopez (Department of Mathematics, UW-Madison), PhD 2021</p>
 </li>
 </ul>
 <h2>MS Alumni</h2>
 <ul>
-<li><p>Pankaj Kabra (Department of Electrical and Computer Engineering), Research-MS&rsquo;19</p>
+<li><p>Pankaj Kabra (Department of Electrical and Computer Engineering, UW-Madison), Research-MS&rsquo;19</p>
 </li>
 </ul>
 <ul>
-<li><p>Geoffrey Lau (Department of Electrical and Computer Engineering) MLSP Accelerated MS&rsquo;18</p>
+<li><p>Geoffrey Lau (Department of Electrical and Computer Engineering, UW-Madison) MLSP Accelerated MS&rsquo;18</p>
 </li>
 </ul>
 <ul>
-<li><p>Kamini Jodha (Department of Electrical and Computer Engineering) MLSP Accelerated MS&rsquo;18</p>
+<li><p>Kamini Jodha (Department of Electrical and Computer Engineering, UW-Madison) MLSP Accelerated MS&rsquo;18</p>
 </li>
 </ul>
 <ul>
-<li><p>Sidharth Gurbani (Department of Electrical and Computer Engineering) Research MS&rsquo;20</p>
+<li><p>Sidharth Gurbani (Department of Electrical and Computer Engineering, UW-Madison) Research MS&rsquo;20</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-26 09:48:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-30 13:13:19 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
