--- a/news.html
+++ b/news.html
@@ -23,20 +23,16 @@
 <h1>Recent news</h1>
 </div>
 <ul>
-<li><p>I am organizing the <a href="https://varunjog.github.io/itseminar.html"><b>Cambridge Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Ventaramanan</b></a> from Michaelmas 2022.</p>
+<li><p>I am organizing the <a href="https://varunjog.github.io/itseminar.html"><b>Cambridge Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Venkataramanan</b></a>.</p>
 </li>
 </ul>
 <ul>
 <li><p>I am an Associate Editor for the IEEE Transactions on Information Theory, October 2021</p>
 </li>
 </ul>
-<ul>
-<li><p>Started a new position as Lecturer at the University of Cambridge, January 2021</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-26 09:48:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-30 13:13:19 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
