--- a/teaching.html
+++ b/teaching.html
@@ -22,12 +22,11 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<p>I will not be teaching in Michaelmas 2022.</p>
 <p>I am teaching Part III: Concentration Inequalities in Lent 2023 and Part IB: Optimization in Easter 2023.</p>
 <p>At Cambridge, I taught Part IB: Optimization in Easter 2021 and Part III: Concentration Inequalities in Michaelmas 2021. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-26 09:48:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-30 13:13:23 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
