--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,10 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2301.03566"><b>Simple Binary Hypothesis Testing under Local Differential Privacy and Communication Constraints</b></a> <br /> Ankit Pensia, Amir Asadi, Varun Jog, and Po-Ling Loh <br /> January 2023</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
 Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2022</p>
 </li>
@@ -197,7 +201,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-26 09:48:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-30 13:13:23 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
