--- a/publications.html
+++ b/publications.html
@@ -24,10 +24,6 @@
 </div>
 <h2>Preprints</h2>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2301.03566"><b>Simple Binary Hypothesis Testing under Local Differential Privacy and Communication Constraints</b></a> <br /> Ankit Pensia, Amir Asadi, Varun Jog, and Po-Ling Loh <br /> January 2023</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
 Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2022</p>
 </li>
@@ -37,6 +33,10 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </li>
 </ul>
 <h2>Conference publications</h2>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2301.03566"><b>Simple Binary Hypothesis Testing under Local Differential Privacy and Communication Constraints</b></a> <br /> Ankit Pensia, Amir Asadi, Varun Jog, and Po-Ling Loh <br /> COLT 2023</p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://ieeexplore.ieee.org/document/9834363"><b>Simple Binary Hypothesis Testing under Communication Constraints</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> ISIT 2022</p>
 </li>
@@ -139,6 +139,10 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <h2>Journal publications</h2>
 <ul>
+<li><p><a href="https://ieeexplore.ieee.org/document/10210607/"><b>The many faces of adversarial risk: An expanded study</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> IEEE Transactions on Information Theory, 2023</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://ieeexplore.ieee.org/document/9834952"><b>Unifying the Brascamp-Lieb inequality and the Entropy Power inequality</b></a> <br /> Venkat Anantharam, Varun Jog, and Chandra Nair.  <br /> IEEE Transactions on Information Theory, July 2022</p>
 </li>
 </ul>
@@ -201,7 +205,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-30 13:13:23 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-14 09:49:07 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
