--- a/group.html
+++ b/group.html
@@ -23,16 +23,17 @@
 <h1>Group</h1>
 </div>
 <h2>PhD </h2>
-<ul>
-<li><p>Ankit Pensia (Department of Computer Sciences, co-advised with Prof. Po-Ling Loh)</p>
-</li>
-</ul>
+<p>I am looking to recruit students at Cambridge. If you have EECS or Math background and are interested in working with me, feel free to send me an email before submitting an application.</p>
 <h2>Postdocs</h2>
 <ul>
 <li><p>Amir Asadi (DPMMS, Cambridge)</p>
 </li>
 </ul>
 <h2>PhD Alumni</h2>
+<ul>
+<li><p>Ankit Pensia (Department of Computer Sciences, co-advised with Prof. Po-Ling Loh and Prof. Ilias Diakonikolas) PhD 2023</p>
+</li>
+</ul>
 <ul>
 <li><p>Jinnian Zhang (Department of Electrical and Computer Engineering, UW-Madison, co-advised with Dr. Alan McMillan) PhD 2023</p>
 </li>
@@ -64,7 +65,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-30 13:13:19 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-14 09:49:07 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
