--- a/itseminar.html
+++ b/itseminar.html
@@ -60,7 +60,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-30 13:13:19 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-14 09:49:07 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
