--- a/news.html
+++ b/news.html
@@ -23,6 +23,10 @@
 <h1>Recent news</h1>
 </div>
 <ul>
+<li><p>I will be on sabbatical in Berkeley, California, from August 2024 - April 2025. </p>
+</li>
+</ul>
+<ul>
 <li><p>I am organizing the <a href="https://varunjog.github.io/itseminar.html"><b>Cambridge Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Venkataramanan</b></a>.</p>
 </li>
 </ul>
@@ -32,7 +36,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-30 13:13:19 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-14 09:49:07 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
