--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-09-14 09:49:07 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-12 14:55:08 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
