--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <td align="left"></td></tr></table>
 <h2>Third person biography</h2>
 <p>Varun Jog received his B.Tech. degree in Electrical Engineering from IIT Bombay in 2010, and his Ph.D. in Electrical Engineering and Computer Sciences (EECS) from UC Berkeley in 2015. He was an Assistant Professor in the Electrical and Computer Engineering Department at UW-Madison from 2016-2020. Since January 2021, he is an Assistant Professor in the Department of Pure Mathematics and Mathematical Statistics (DPMMS) at the University of Cambridge. His research interests include information theory, machine learning, and statistics. He is a recipient of the NSF-CAREER Award (2020), the R. Narasimhan Memorial Lecture Award (2020), the Eli Jury Award from the EECS Department at UC Berkeley (2015), and the Jack Keil Wolf student paper award at ISIT 2015. </p>
-<h2>Resume and personal research statement == </h2>
-<p>Here is my <a href="https://github.com/varunjog/resume/blob/main/resume_current.pdf"><b>resume</b></a> and a personal research statement.</p>
+<h2>Resume and personal research statement </h2>
+<p>Here is my <a href="https://github.com/varunjog/resume/blob/main/resume_current.pdf"><b>resume</b></a> and a <a href="https://github.com/varunjog/resume/blob/main/personal_statement.pdf"><b>personal research statement</b></a>.</p>
 <h2>Information Theory Seminar</h2>
 <p>I am co-organizing the <a href="http://talks.cam.ac.uk/show/index/144905"><b>Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Venkataramanan</b></a>. Please contact Ramji or me if you would like to speak, have speaker suggestions, or have any other questions.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 14:55:08 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-12 14:59:23 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
