--- a/publications.html
+++ b/publications.html
@@ -24,11 +24,6 @@
 </div>
 <h2>Preprints</h2>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
-Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> June 2022</p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2009.12976"><b>Robust regression with covariate filtering: Heavy tails and adversarial contamination</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> September 2020</p>
 </li>
 </ul>
@@ -139,6 +134,11 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <h2>Journal publications</h2>
 <ul>
+<li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
+Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> IEEE Transactions on Information Theory, 2024 (To appear)</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://ieeexplore.ieee.org/document/10210607/"><b>The many faces of adversarial risk: An expanded study</b></a> <br /> Muni Sreenivas Pydi and Varun Jog <br /> IEEE Transactions on Information Theory, 2023</p>
 </li>
 </ul>
@@ -205,7 +205,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 14:59:23 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-12 15:03:44 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
