--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 15:03:44 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-19 10:29:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
