--- a/group.html
+++ b/group.html
@@ -24,9 +24,17 @@
 </div>
 <h2>PhD </h2>
 <p>I am looking to recruit students at Cambridge. If you have EECS or Math background and are interested in working with me, feel free to send me an email before submitting an application.</p>
-<h2>Postdocs</h2>
+<h2>Postdoc alumni</h2>
 <ul>
-<li><p>Amir Asadi (DPMMS, Cambridge)</p>
+<li><p>Amir Asadi (2021-2023) </p>
+</li>
+</ul>
+<ul>
+<li><p>Deepanshu Vasal (2016-2017)</p>
+</li>
+</ul>
+<ul>
+<li><p>Andre Wibisono (2016-2018)</p>
 </li>
 </ul>
 <h2>PhD Alumni</h2>
@@ -65,7 +73,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 15:03:44 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-19 10:29:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
