--- a/publications.html
+++ b/publications.html
@@ -24,10 +24,18 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> March 2024</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2009.12976"><b>Robust regression with covariate filtering: Heavy tails and adversarial contamination</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> September 2020</p>
 </li>
 </ul>
 <h2>Conference publications</h2>
+<ul>
+<li><p><a href="*On">the Extreme Points of the <img class="eq" src="eqs/7639029190986536972-130.png" alt="(0, delta)" style="vertical-align: -5px" />-Differential Privacy Polytope*</a> <br /> Karan Elangovan, Varun Jog <br /> ISIT 2024</p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2301.03566"><b>Simple Binary Hypothesis Testing under Local Differential Privacy and Communication Constraints</b></a> <br /> Ankit Pensia, Amir Asadi, Varun Jog, and Po-Ling Loh <br /> COLT 2023</p>
 </li>
@@ -205,7 +213,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-12 15:03:44 GMT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-19 10:29:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
