--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 </ul>
 <h2>Conference publications</h2>
 <ul>
-<li><p><a href="*On">the Extreme Points of the <img class="eq" src="eqs/7639029190986536972-130.png" alt="(0, delta)" style="vertical-align: -5px" />-Differential Privacy Polytope*</a> <br /> Karan Elangovan, Varun Jog <br /> ISIT 2024</p>
+<li><p><b>On the Extreme Points of the <img class="eq" src="eqs/7639029190986536972-130.png" alt="(0, delta)" style="vertical-align: -5px" />-Differential Privacy Polytope</b> <br /> Karan Elangovan, Varun Jog <br /> ISIT 2024</p>
 </li>
 </ul>
 <ul>
@@ -213,7 +213,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-19 10:29:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-19 10:34:11 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
