--- a/news.html
+++ b/news.html
@@ -23,20 +23,12 @@
 <h1>Recent news</h1>
 </div>
 <ul>
-<li><p>I will be on sabbatical in Berkeley, California, from August 2024 - April 2025. </p>
-</li>
-</ul>
-<ul>
-<li><p>I am organizing the <a href="https://varunjog.github.io/itseminar.html"><b>Cambridge Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Venkataramanan</b></a>.</p>
-</li>
-</ul>
-<ul>
-<li><p>I am an Associate Editor for the IEEE Transactions on Information Theory, October 2021</p>
+<li><p>I will be on sabbatical in Berkeley, California, from August 2024 - April 2025. I will be a research member at the Simons Institute program on <a href="https://simons.berkeley.edu/programs/modern-paradigms-generalization"><b>Modern Paradigms in Generalization</b></a> in the Fall semester, and at the SLMath program <a href="https://www.slmath.org/programs/348"><b>Probability and Statistics of Discrete Structures</b></a> in the Spring semester.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-19 10:35:50 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-15 09:03:04 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
