--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,10 @@
 </ul>
 <h2>Conference publications</h2>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> COLT 2024</p>
+</li>
+</ul>
+<ul>
 <li><p><b>On the Extreme Points of the <img class="eq" src="eqs/7639029190986536972-130.png" alt="(0, delta)" style="vertical-align: -5px" />-Differential Privacy Polytope</b> <br /> Karan Elangovan, Varun Jog <br /> ISIT 2024</p>
 </li>
 </ul>
@@ -213,7 +217,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-19 10:35:51 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-15 09:03:05 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
