--- a/group.html
+++ b/group.html
@@ -24,6 +24,11 @@
 </div>
 <h2>PhD </h2>
 <p>I am looking to recruit students at Cambridge. If you have EECS or Math background and are interested in working with me, feel free to send me an email before submitting an application.</p>
+<h2>Visitors</h2>
+<ul>
+<li><p><a href="https://davidng-dn.github.io/"><b>David Ng</b></a>, February 2024 - August 2024</p>
+</li>
+</ul>
 <h2>Postdoc alumni</h2>
 <ul>
 <li><p>Amir Asadi (2021-2023) </p>
@@ -73,7 +78,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-19 10:35:50 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-15 09:03:04 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
