--- a/publications.html
+++ b/publications.html
@@ -27,10 +27,6 @@
 <li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> March 2024</p>
 </li>
 </ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2009.12976"><b>Robust regression with covariate filtering: Heavy tails and adversarial contamination</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> September 2020</p>
-</li>
-</ul>
 <h2>Conference publications</h2>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> COLT 2024</p>
@@ -146,8 +142,20 @@
 </ul>
 <h2>Journal publications</h2>
 <ul>
+<li><p><a href="https://iopscience.iop.org/article/10.1088/2057-1976/ad6e87/meta"><b>RobMedNAS: searching robust neural network architectures for medical image synthesis</b></a> <br /> Jinnain Zhang, Weijie Chen, Tanmayee Joshi, Meltem Uyanik, Xiaomin Zhang, Po-Ling Loh, Varun Jog, Richard Bruce, John Garrett, and Alan McMillan <br /> Biomedical Physics &amp; Engineering Express, 2024</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2301.03566"><b>Simple Binary Hypothesis Testing under Local Differential Privacy and Communication Constraints</b></a> <br /> Ankit Pensia, Amir Asadi, Varun Jog, and Po-Ling Loh <br /> IEEE Transactions on Information Theory, 2024</p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2009.12976"><b>Robust regression with covariate filtering: Heavy tails and adversarial contamination</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> Journal of the American Statistical Association (JASA), 2024 </p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/pdf/2206.02765.pdf"><b>Communication-constrained hypothesis testing:
-Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> IEEE Transactions on Information Theory, 2024 (To appear)</p>
+Optimality, robustness, and reverse data processing inequalities</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> IEEE Transactions on Information Theory, 2024 </p>
 </li>
 </ul>
 <ul>
@@ -217,7 +225,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-15 09:03:05 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
