--- a/group.html
+++ b/group.html
@@ -22,8 +22,16 @@
 <div id="toptitle">
 <h1>Group</h1>
 </div>
-<h2>PhD </h2>
 <p>I am looking to recruit students at Cambridge. If you have EECS or Math background and are interested in working with me, feel free to send me an email before submitting an application.</p>
+<h2>PhD </h2>
+<ul>
+<li><p>Aditya Dhawan (2024-)</p>
+</li>
+</ul>
+<ul>
+<li><p>Hadi Kazemi (2024-)</p>
+</li>
+</ul>
 <h2>Visitors</h2>
 <ul>
 <li><p><a href="https://davidng-dn.github.io/"><b>David Ng</b></a>, February 2024 - August 2024</p>
@@ -78,7 +86,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-15 09:03:04 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
