--- a/group.html
+++ b/group.html
@@ -25,10 +25,6 @@
 <p>I am looking to recruit students at Cambridge. If you have EECS or Math background and are interested in working with me, feel free to send me an email before submitting an application.</p>
 <h2>PhD </h2>
 <ul>
-<li><p>Aditya Dhawan (2024-)</p>
-</li>
-</ul>
-<ul>
 <li><p>Hadi Kazemi (2024-)</p>
 </li>
 </ul>
@@ -86,7 +82,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
