--- a/itseminar.html
+++ b/itseminar.html
@@ -60,7 +60,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
