--- a/news.html
+++ b/news.html
@@ -22,17 +22,9 @@
 <div id="toptitle">
 <h1>Recent news</h1>
 </div>
-<ul>
-<li><p>I am on sabbatical in Berkeley, California, from August 2024 - April 2025. I will visit the the Simons Institute program on <a href="https://simons.berkeley.edu/programs/modern-paradigms-generalization"><b>Modern Paradigms in Generalization</b></a> in the Fall semester, and at the SLMath program <a href="https://www.slmath.org/programs/348"><b>Probability and Statistics of Discrete Structures</b></a> in the Spring semester.</p>
-</li>
-</ul>
-<ul>
-<li><p>I am co-organizing a <a href="https://workshops.birs.ca/events/25w5389"><b>BIRS workshop</b></a> at the Chennai Mathematical Institute from January 12-17, 2025.</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
