--- a/teaching.html
+++ b/teaching.html
@@ -22,11 +22,11 @@
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
-<p>I am teaching Part IB: Optimisation in Easter 2024.</p>
-<p>At Cambridge, I taught Part IB: Optimisation in Easter 2021, 2023 and Part III: Concentration Inequalities in Michaelmas 2021 and Lent 2023, 2024. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
+<p>I will teach Part III: Concentration Inequalities in Lent 2026.</p>
+<p>At Cambridge, I have taught Part IB: Optimisation and Part III: Concentration Inequalities several times. At UW-Madison, I taught  ECE 730, &ldquo;Modern Probability Theory and Stochastic Processes&rdquo;,  ECE 729, &ldquo;Theory of Information Processing and Transmission&rdquo;, ECE 203, &ldquo;Signals, Information, and Computation&rdquo;, and ECE 611, &ldquo;Introduction to Doctoral Research&rdquo;</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
