--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p>I co-organize the <a href="http://talks.cam.ac.uk/show/index/144905"><b>Information Theory Seminar</b></a> along with <a href="http://www.eng.cam.ac.uk/profiles/rv285"><b>Ramji Venkataramanan</b></a>. Please contact Ramji or me if you would like to speak, have speaker suggestions, or have any other questions.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:24 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
