--- a/publications.html
+++ b/publications.html
@@ -24,10 +24,20 @@
 </div>
 <h2>Preprints</h2>
 <ul>
+<li><p><a href="https://www.arxiv.org/abs/2506.13686"><b>The Sample Complexity of Distributed Simple Binary Hypothesis Testing under Information Constraints
+</b></a> <br /> Hadi Kazemi, Ankit Pensia, and Varun Jog <br /> June 2025</p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> March 2024</p>
 </li>
 </ul>
 <h2>Conference publications</h2>
+<ul>
+<li><p><a href="https://www.arxiv.org/abs/2506.13686"><b>The Sample Complexity of Distributed Simple Binary Hypothesis Testing under Information Constraints
+</b></a> <br /> Hadi Kazemi, Ankit Pensia, and Varun Jog <br /> COLT 2025</p>
+</li>
+</ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2403.16981"><b>The Sample Complexity of Simple Binary Hypothesis Testing</b></a> <br /> Ankit Pensia, Varun Jog, and Po-Ling Loh <br /> COLT 2024</p>
 </li>
@@ -225,7 +235,7 @@ Optimality, robustness, and reverse data processing inequalities</b></a> <br /> 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-01 11:24:29 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-06-20 11:47:25 BST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
